--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -351,7 +351,7 @@
 
   <!-- Resources -->
   <h2>Resources</h2>
-  <p>{{files}}</p>
+  <p>{{filePath}}</p>
   <p>Here are some links to help you get started:</p>
 
   <div class="card-container">
