--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,49 @@
-#table {
-  height: 100%;
+#main {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  height: auto;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 10px;
+}
+
+#controls {
+  width: 100%;
+  height: 20px;
+  margin-bottom: 20px;
+  display: flex;
+}
+
+#controls > button {
+  width: 80px;
+  margin-left: 10px;
+}
+
+#controls > input {
+  flex-grow: 1;
+}
+
+#tables {
+  flex-grow: 1;
+  display: flex;
+}
+
+.hot {
+  overflow: hidden;
+  flex-grow: 1;
+}
+
+.handsonetable > tr:nth-child(even) {
+  background: burlywood;
+}
+
+.handsonetable > td {
+  background-color: #fff0;
+}
+
+.hot .currentRow {
+  background-color: aliceblue;
 }
