--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,10 @@
       [settings]="tableSettings"
       [data]="dataset">
         <hot-column data="name" [readOnly]="true" title="Name"></hot-column>
-        <hot-column data="archiveName" [readOnly]="true" title="Archive name"></hot-column>
-        <hot-column data="extractSymbol" [readOnly]="true" title="Symbol"></hot-column>
+        <hot-column data="bssSize" [readOnly]="true" title="BSS"></hot-column>
+        <hot-column data="dataSize" [readOnly]="true" title="DATA"></hot-column>
+        <hot-column data="textSize" [readOnly]="true" title="TEXT"></hot-column>
+        <hot-column data="otherSize" [readOnly]="true" title="OTHER"></hot-column>
     </hot-table>
   </div>
 </div>
