--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-#main {
+.main {
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -10,20 +10,50 @@
   margin: 10px;
 }
 
-#controls {
+.settings {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  height: auto;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 10px;
+}
+
+.settings > button {
+  margin-bottom: 10px;
+  align-self: flex-end;
+}
+
+.settings form {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.settings > form > mat-form-field {
+  width: 300px;
+}
+
+.controls {
   width: 100%;
-  height: 20px;
   margin-bottom: 20px;
   display: flex;
 }
 
-#controls > button {
-  width: 80px;
-  margin-left: 10px;
+.controls form {
+  flex-grow: 1;
 }
 
-#controls > input {
-  flex-grow: 1;
+.controls > form > mat-form-field {
+  width: 100%;
+}
+
+.controls button {
+  height: 30px;
+  margin: auto 10px;
 }
 
 #tables {
