--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,6 @@
 .main {
   display: flex;
+  min-height: min-content;
   flex-direction: column;
   position: absolute;
   height: auto;
@@ -58,6 +59,7 @@
 
 #tables {
   flex-grow: 1;
+  overflow: auto;
   display: flex;
 }
 
@@ -68,16 +70,4 @@
 .hot {
   overflow: hidden;
   flex-grow: 1;
-}
-
-.handsonetable > tr:nth-child(even) {
-  background: burlywood;
-}
-
-.handsonetable > td {
-  background-color: #fff0;
-}
-
-.hot .currentRow {
-  background-color: aliceblue;
 }
