Calculate actual sizes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -88,6 +88,7 @@
             [settings]="locationTableSettings"
             [data]="locationTableDataset">
               <hot-column data="chip" [readOnly]="true" title="CHIP"></hot-column>
+              <hot-column data="actualSize" [readOnly]="true" title="CSIZE"></hot-column>
               <hot-column data="size" [readOnly]="true" title="SIZE"></hot-column>
               <hot-column data="group" [readOnly]="true" title="GROUP"></hot-column>
               <hot-column data="name" [readOnly]="true" title="Module"></hot-column>
