--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,6 +55,14 @@
               <mat-header-cell mat-header-cell *matHeaderCellDef> Free </mat-header-cell>
               <mat-cell mat-cell *matCellDef="let element"> {{element.free}} </mat-cell>
             </ng-container>
+            <ng-container matColumnDef="chipData">
+              <mat-header-cell mat-header-cell *matHeaderCellDef> Used (Chip) </mat-header-cell>
+              <mat-cell mat-cell *matCellDef="let element"> {{element.chipData}} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="chipFree">
+              <mat-header-cell mat-header-cell *matHeaderCellDef> Free (Chip) </mat-header-cell>
+              <mat-cell mat-cell *matCellDef="let element"> {{element.chipFree}} </mat-cell>
+            </ng-container>
             <ng-container matColumnDef="total">
               <mat-header-cell mat-header-cell *matHeaderCellDef> Total </mat-header-cell>
               <mat-cell mat-cell *matCellDef="let element"> {{element.total - element.reserved}} </mat-cell>
